--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -544,7 +544,6 @@
     <div style="width:100%; margin:0px; padding:0px; border-top: #242424 2px solid; border-bottom: #242424 2px solid; margin-top: 150px; background: linear-gradient(to right, rgba(0,0,0,0), rgba(254,154,0,0.2))">
         <h1><i style="color: #FE9A00" class="fa-solid fa-user-lock"></i> Personal Options</h1>
         <p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:30px;">Options that are universally applied across Countdowns you visit</p>
-        <p id="cdscheduledisclaimer" style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:30px; display:none; background:linear-gradient(to bottom right, #ff53535f, #00000000); border:#ff5353 2px dashed; border-radius:100px; padding:5px 10px 5px 10px; width:fit-content;"><i class="fa-regular fa-calendar-xmark"></i> Some options will not apply to Countdown Schedules</p>
     </div>
     <br />
     <br />
@@ -553,9 +552,9 @@
     <h1 class="textelement" id="appearanceoptions">
         Appearance
     </h1>
-                    <Br>
-                <br>
-                <br>
+	<Br>
+        <br>
+        <br>
     <h2 class="textelement" style="font-family: 'Dosis';">
         Animation Speed
     </h2>
@@ -584,9 +583,9 @@
     <h1 class="textelement" id="eouoptions">
         Ease of Use
     </h1>
-                    <Br>
-                <br>
-                <br>
+        <Br>
+        <br>
+        <br>
     <a id="soce" class="disabled" onclick="soce();"><i class="fa-solid fa-volume-mute"></i> Disable End Sounds</a>
     <a id="memsav" class="disabled" onclick="memsav();"><i class="fa-solid fa-gauge-high"></i> Memory Saver</a>
 	<a id="contrast" class="disabled" onclick="contrast();"><i class="fa-solid fa-circle-half-stroke"></i> Increase Contrast</a>
@@ -597,9 +596,10 @@
     <h1 id="inclusionoptions" class="textelement">
         Only Include
     </h1>
-                    <Br>
-                <br>
-                <br>
+	<p id="cdscheduledisclaimer" style="font-family: 'Dosis', sans-serif; color:white; font-size:16px; margin-bottom:30px; display:none; background:linear-gradient(to bottom right, #ff53535f, #00000000); border:#ff5353 2px dashed; border-radius:100px; padding:5px 10px 5px 10px; width:fit-content;"><i class="fa-regular fa-calendar-xmark"></i> Only Include will not apply to Countdown Schedules</p>
+        <Br>
+        <br>
+        <br>
     <a id="week" class="disabled" onclick="week();"><i class="fa-solid fa-calendar-week"></i> Weeks</a>
     <a id="day" class="disabled" onclick="day();"><i class="fa-solid fa-calendar-days"></i> Days</a>
     <a id="hour" class="disabled" onclick="hour();"><i class="fa-solid fa-clock"></i> Hours</a>
