--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -227,6 +227,8 @@
         <a onclick="updateSaveButtonText()">Update Dynamic Save Button</a>
         <a onclick="SetCountDowngeneral()">scdg</a>
         <a onclick="autopilotsparkle()">sparkle</a>
+	<a onclick="startConfettiManagerAnimation();">Confetti</a>
+	<a onclick="stopConfettiManagerAnimation();">Stop Confetti</a>
 		<a href="http://michaeldors.github.io/mcacountdown/Information/testing.countdown">Download Testing Dashboard Save</a>
 
 		</div>
