--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -225,6 +225,7 @@
 		<a class="warning" onclick="eraseCookie('cookiesAccepted');"><i class="fa-solid fa-trash"></i> Revoke Cookie Consent</a>
 		<a href="countdowndashboard.html">Open Countdown Dashboard</a>
         <a onclick="updateSaveButtonText()">Update Dynamic Save Button</a>
+	<a onclick="document.querySelector(".datepicker").value = new Date(new Date().getTime() + 60000).toISOString().slice(0,16);">One Minute</a>
         <a onclick="SetCountDowngeneral()">scdg</a>
         <a onclick="autopilotsparkle()">sparkle</a>
 	<a onclick="startConfettiManagerAnimation();">Confetti</a>
