--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -226,7 +226,7 @@
 		<a href="countdowndashboard.html">Open Countdown Dashboard</a>
         <a onclick="updateSaveButtonText()">Update Dynamic Save Button</a>
 	<a onclick="SetCountDowngeneral();">Update Countdown</a>
-	<a onclick="document.querySelector('.datepicker').value = new Date(new Date().getTime() + 60000).toISOString().slice(0,16); SetCountDowngeneral();">One Minute</a>
+	<a onclick="document.querySelector('.datepicker').value = new Date(new Date().getTime() + 60000); SetCountDowngeneral();">One Minute</a>
         <a onclick="SetCountDowngeneral()">scdg</a>
         <a onclick="autopilotsparkle()">sparkle</a>
 	<a onclick="startConfettiManagerAnimation();">Confetti</a>
