--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -226,7 +226,6 @@
 		<a href="countdowndashboard.html">Open Countdown Dashboard</a>
         <a onclick="updateSaveButtonText()">Update Dynamic Save Button</a>
 	<a onclick="SetCountDowngeneral();">Update Countdown</a>
-	<a onclick="const datepicker = document.querySelector('.datepicker'); const now = new Date(); now.setMinutes(now.getMinutes() + 1); const localISOTime = now.toISOString().slice(0,16); datepicker.value = localISOTime; SetCountDowngeneral();">One Minute</a>
         <a onclick="SetCountDowngeneral()">scdg</a>
         <a onclick="autopilotsparkle()">sparkle</a>
 	<a onclick="startConfettiManagerAnimation();">Confetti</a>
@@ -276,6 +275,7 @@
                     <div class="icon"><i id="left" class="fa-solid fa-angle-left"></i></div>
                     <ul class="tabs-box" id="tabs-box">
                         <!--<li id="customtab" class="tab active">Custom</li>-->
+			<li class="debugtab" id="onemintab" style="display:none" onclick="const datepicker = document.querySelector('.datepicker'); const now = new Date(); now.setMinutes(now.getMinutes() + 1); const localISOTime = now.toISOString().slice(0,16); datepicker.value = localISOTime; SetCountDowngeneral();">One Minute</li>
                         <li title="Timekeeper will automatically pick the next upcoming holiday" id="autopilottab" class="autopilottab" onclick="autopilottab(); autopilotsparkle(event); SetCountDowngeneral();"><i class="fa-solid fa-business-time"></i> Second Sense</li>
                         <li id="endtab" class="mcatab" onclick="MES(); SetCountDowngeneral();">MCA</li>
                         <li id="nydtab" class="tab" onclick="NYD(); SetCountDowngeneral();">New Year's Day</li>
