--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -216,7 +216,7 @@
                 <a title="Save to Countdown Dashboard" id="savedash" class="savedash" onclick="savetodash();"><i class="fa-solid fa-star"></i> Save</a>
 
 		<div id="debugoptions" style="display:none;">
-			<h1>Debug Options</h1>
+			<h1>Debug Options Are Enabled</h1>
 		<p style="font-family: 'Dosis', sans-serif; color:white; font-size:16px;">
                     <strong>IF YOU OPENED THIS MENU BY ACCIDENT</strong> PLEASE RELOAD THE PAGE
                 </p>
