--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -225,7 +225,7 @@
 		<a class="warning" onclick="eraseCookie('cookiesAccepted');"><i class="fa-solid fa-trash"></i> Revoke Cookie Consent</a>
 		<a href="countdowndashboard.html">Open Countdown Dashboard</a>
         <a onclick="updateSaveButtonText()">Update Dynamic Save Button</a>
-	<a onclick="SetCountDowngeneral();">Update Countdown</a>
+	<a onclick="cardmodemanager();">cardmode</a>
         <a onclick="SetCountDowngeneral()">scdg</a>
         <a onclick="autopilotsparkle()">sparkle</a>
 	<a onclick="startConfettiManagerAnimation();">Confetti</a>
