--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -627,7 +627,7 @@
 
 
 
-    <div id="autopilotpopup" style="margin:0; padding:0; position:absolute; top:80%; left:0px; width:100%; height:20%; border-top:solid 3px white; opacity:1; transition:0.5s opacity;">
+    <div id="autopilotpopup" style="margin:0; padding:0; position:absolute; top:80%; left:0px; width:100%; height:20%; border-top:solid 3px white; opacity:1; transition:0.5s opacity; color:white;">
         <h1 style="position: absolute; top: 15%; left: calc(50vw - 21px); paint-order: stroke fill; -webkit-text-stroke-width: 10px; -webkit-text-stroke-color: #141414;">or</h1>
         <div onclick="settings()" id="manualpilot" style="background-image:url(calendarbg.png); background-size:cover; width: 50%; float: left; height: 100%; cursor:pointer;">
             <h1 style="margin-left:10px" id="gearpointer"><i style="margin-right:30px;" class="fa-solid fa-angle-down"></i><span style="padding-top:100px;">pick a date</span></h1>
@@ -635,7 +635,7 @@
         <div id="autopilot" style="float: right; width: 50%; background: linear-gradient(to right, #141414, #01FE5E); height: 100%; outline: 3px white solid; ">
             <div id="autopilotinfo" style="margin-left: 60px;">
                 <h3 style="position: relative; display: inline-block; background-color: white; border-radius: 20px; padding: 5px 10px 5px 10px;">
-                    <span style="color: #11371f;">
+                    <span style="color: #11371f !important;">
                         <i class="fa-solid fa-compass"></i> TIMEKEEPER
                     </span>
                 </h3>
@@ -653,7 +653,7 @@
         </div>
     </div>
 
-    <div id="autopilotpopupmobile" style="margin:0; padding:0; position:absolute; top:60%; left:0px; width:100%; height:40%; opacity:1; transition:0.5s opacity;">
+    <div id="autopilotpopupmobile" style="margin:0; padding:0; position:absolute; top:60%; left:0px; width:100%; height:40%; opacity:1; transition:0.5s opacity; color:white;">
         <div id="autopilotmobile" style="width: 100%; background: linear-gradient(to bottom, rgba(255,0,0,0), #01FE5E); height: 45%;">
             <div id="autopilotinfomobile" style="margin-left: 60px;">
                 <h3 style="position: relative; display: inline-block; background-color: white; border-radius: 20px; padding: 5px 10px 5px 10px;">
