--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -627,8 +627,8 @@
 
 
 
-    <div id="autopilotpopup" style="margin:0; padding:0; position:absolute; top:80%; left:0px; width:100%; height:20%; border-top:solid 3px white; opacity:1; transition:0.5s opacity; color:white;">
-        <h1 style="position: absolute; top: 15%; left: calc(50vw - 21px); paint-order: stroke fill; -webkit-text-stroke-width: 10px; -webkit-text-stroke-color: #141414;">or</h1>
+    <div id="autopilotpopup">
+        <h1 id="autopilotpopupor">or</h1>
         <div onclick="settings()" id="manualpilot" style="background-image:url(calendarbg.png); background-size:cover; width: 50%; float: left; height: 100%; cursor:pointer;">
             <h1 style="margin-left:10px" id="gearpointer"><i style="margin-right:30px;" class="fa-solid fa-angle-down"></i><span style="padding-top:100px;">pick a date</span></h1>
         </div>
@@ -653,7 +653,7 @@
         </div>
     </div>
 
-    <div id="autopilotpopupmobile" style="margin:0; padding:0; position:absolute; top:60%; left:0px; width:100%; height:40%; opacity:1; transition:0.5s opacity; color:white;">
+    <div id="autopilotpopupmobile">
         <div id="autopilotmobile" style="width: 100%; background: linear-gradient(to bottom, rgba(255,0,0,0), #01FE5E); height: 45%;">
             <div id="autopilotinfomobile" style="margin-left: 60px;">
                 <h3 style="position: relative; display: inline-block; background-color: white; border-radius: 20px; padding: 5px 10px 5px 10px;">
@@ -664,7 +664,7 @@
                 <h1 id="autopilotpredictionmobile" style="line-height:0.000001">Finding...</h1>
             </div>
         </div>
-        <h1 style="position: absolute; top: 33%; text-align: center; width:100%; color: white; paint-order: stroke fill; -webkit-text-stroke-width: 10px; -webkit-text-stroke-color: #141414;">or</h1>
+        <h1 id="autopilotpopupormobile">or</h1>
         <div id="manualpilotmobile" style="background-image:url(calendarbg.png); margin-top:0px; background-size:cover; width: 100%; height: 100%; border-top:3px solid white;">
             <h2 id="gearpointer" style="text-align: center; width:100%; padding-top:20px;">
                 <span style="padding-top:100px;">pick a date under</span>
