--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -628,9 +628,9 @@
 
 
     <div id="autopilotpopup" style="margin:0; padding:0; position:absolute; top:80%; left:0px; width:100%; height:20%; border-top:solid 3px white; opacity:1; transition:0.5s opacity; color:white;">
-        <h1 style="position: absolute; top: 15%; left: calc(50vw - 21px); paint-order: stroke fill; -webkit-text-stroke-width: 10px; -webkit-text-stroke-color: #141414;">or</h1>
+        <h1 style="position: absolute; top: 15%; left: calc(50vw - 21px); paint-order: stroke fill; -webkit-text-stroke-width: 10px; -webkit-text-stroke-color: #141414; color:white !important;">or</h1>
         <div onclick="settings()" id="manualpilot" style="background-image:url(calendarbg.png); background-size:cover; width: 50%; float: left; height: 100%; cursor:pointer;">
-            <h1 style="margin-left:10px" id="gearpointer"><i style="margin-right:30px;" class="fa-solid fa-angle-down"></i><span style="padding-top:100px;">pick a date</span></h1>
+            <h1 style="margin-left:10px; color:white !important;" id="gearpointer"><i style="margin-right:30px;" class="fa-solid fa-angle-down"></i><span style="padding-top:100px;">pick a date</span></h1>
         </div>
         <div id="autopilot" style="float: right; width: 50%; background: linear-gradient(to right, #141414, #01FE5E); height: 100%; outline: 3px white solid; ">
             <div id="autopilotinfo" style="margin-left: 60px;">
@@ -639,7 +639,7 @@
                         <i class="fa-solid fa-compass"></i> TIMEKEEPER
                     </span>
                 </h3>
-                <h1 id="autopilotprediction" style="line-height:0.000001">Finding...</h1>
+                <h1 id="autopilotprediction" style="line-height:0.000001; color:white !important;">Finding...</h1>
             </div>
             <div onmouseup="closeautopanel();" style="cursor:pointer;" class="autopilot-countdown-container">
                 <div class="autopilot-countdown-number">X</div>
@@ -661,12 +661,12 @@
                         <i class="fa-solid fa-compass"></i> TIMEKEEPER
                     </span>
                 </h3>
-                <h1 id="autopilotpredictionmobile" style="line-height:0.000001">Finding...</h1>
+                <h1 id="autopilotpredictionmobile" style="line-height:0.000001; color:white !important;">Finding...</h1>
             </div>
         </div>
-        <h1 style="position: absolute; top: 33%; text-align: center; width:100%; color: white; paint-order: stroke fill; -webkit-text-stroke-width: 10px; -webkit-text-stroke-color: #141414;">or</h1>
+        <h1 style="position: absolute; top: 33%; text-align: center; width:100%; color: white; paint-order: stroke fill; -webkit-text-stroke-width: 10px; -webkit-text-stroke-color: #141414; color:white !important;">or</h1>
         <div id="manualpilotmobile" style="background-image:url(calendarbg.png); margin-top:0px; background-size:cover; width: 100%; height: 100%; border-top:3px solid white;">
-            <h2 id="gearpointer" style="text-align: center; width:100%; padding-top:20px;">
+            <h2 id="gearpointer" style="text-align: center; width:100%; padding-top:20px; color:white !important;">
                 <span style="padding-top:100px;">pick a date under</span>
             </h2>
             <div style="text-align: center;">
