--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -970,7 +970,7 @@ button:hover {
     transform:translateY(-50%);
     right: 15px;
     background-color: rgba(0, 0, 0, 0);
-    color: white;
+    color: var(--mainforegroundcolor);
     border: none;
     border-radius: 4px;
     padding: 5px 10px;
